[UPD] update proxy data format
