# proxy-server/swagger_server/models/concept.py
@@ -1,7 +1,6 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from swagger_server.models.jsonld_id import JsonldId
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
@@ -13,52 +12,47 @@ class Concept(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, httpschema_orgrepository: JsonldId=None, httpschema_orgontology: JsonldId=None, iri: str=None, label: str=None, description: str=None, short: str=None, synonyms: str=None):
+    def __init__(self, rdfsis_defined_by: str=None, id: str=None, skospref_label: str=None, skosdefinition: str=None, skosnote: str=None, skosalt_label: str=None):
         """
         Concept - a model defined in Swagger
 
-        :param httpschema_orgrepository: The httpschema_orgrepository of this Concept.
-        :type httpschema_orgrepository: JsonldId
-        :param httpschema_orgontology: The httpschema_orgontology of this Concept.
-        :type httpschema_orgontology: JsonldId
-        :param iri: The iri of this Concept.
-        :type iri: str
-        :param label: The label of this Concept.
-        :type label: str
-        :param description: The description of this Concept.
-        :type description: str
-        :param short: The short of this Concept.
-        :type short: str
-        :param synonyms: The synonyms of this Concept.
-        :type synonyms: str
+        :param rdfsis_defined_by: The rdfsis_defined_by of this Concept.
+        :type rdfsis_defined_by: str
+        :param id: The id of this Concept.
+        :type id: str
+        :param skospref_label: The skospref_label of this Concept.
+        :type skospref_label: str
+        :param skosdefinition: The skosdefinition of this Concept.
+        :type skosdefinition: str
+        :param skosnote: The skosnote of this Concept.
+        :type skosnote: str
+        :param skosalt_label: The skosalt_label of this Concept.
+        :type skosalt_label: str
         """
         self.swagger_types = {
-            'httpschema_orgrepository': JsonldId,
-            'httpschema_orgontology': JsonldId,
-            'iri': str,
-            'label': str,
-            'description': str,
-            'short': str,
-            'synonyms': str
+            'rdfsis_defined_by': str,
+            'id': str,
+            'skospref_label': str,
+            'skosdefinition': str,
+            'skosnote': str,
+            'skosalt_label': str
         }
 
         self.attribute_map = {
-            'httpschema_orgrepository': 'http://schema.org/repository',
-            'httpschema_orgontology': 'http://schema.org/ontology',
-            'iri': 'http://schema.org/iri',
-            'label': 'http://schema.org/label',
-            'description': 'http://schema.org/description',
-            'short': 'http://schema.org/short',
-            'synonyms': 'http://schema.org/synonyms'
+            'rdfsis_defined_by': 'http://www.w3.org/2000/01/rdf-schema#isDefinedBy',
+            'id': '@id',
+            'skospref_label': 'http://www.w3.org/2004/02/skos/core#prefLabel',
+            'skosdefinition': 'http://www.w3.org/2004/02/skos/core#definition',
+            'skosnote': 'http://www.w3.org/2004/02/skos/core#note',
+            'skosalt_label': 'http://www.w3.org/2004/02/skos/core#altLabel'
         }
 
-        self._httpschema_orgrepository = httpschema_orgrepository
-        self._httpschema_orgontology = httpschema_orgontology
-        self._iri = iri
-        self._label = label
-        self._description = description
-        self._short = short
-        self._synonyms = synonyms
+        self._rdfsis_defined_by = rdfsis_defined_by
+        self._id = id
+        self._skospref_label = skospref_label
+        self._skosdefinition = skosdefinition
+        self._skosnote = skosnote
+        self._skosalt_label = skosalt_label
 
     @classmethod
     def from_dict(cls, dikt) -> 'Concept':
@@ -73,149 +67,128 @@ class Concept(Model):
         return deserialize_model(dikt, cls)
 
     @property
-    def httpschema_orgrepository(self) -> JsonldId:
+    def rdfsis_defined_by(self) -> str:
         """
-        Gets the httpschema_orgrepository of this Concept.
+        Gets the rdfsis_defined_by of this Concept.
 
-        :return: The httpschema_orgrepository of this Concept.
-        :rtype: JsonldId
-        """
-        return self._httpschema_orgrepository
-
-    @httpschema_orgrepository.setter
-    def httpschema_orgrepository(self, httpschema_orgrepository: JsonldId):
-        """
-        Sets the httpschema_orgrepository of this Concept.
-
-        :param httpschema_orgrepository: The httpschema_orgrepository of this Concept.
-        :type httpschema_orgrepository: JsonldId
-        """
-
-        self._httpschema_orgrepository = httpschema_orgrepository
-
-    @property
-    def httpschema_orgontology(self) -> JsonldId:
-        """
-        Gets the httpschema_orgontology of this Concept.
-
-        :return: The httpschema_orgontology of this Concept.
-        :rtype: JsonldId
-        """
-        return self._httpschema_orgontology
-
-    @httpschema_orgontology.setter
-    def httpschema_orgontology(self, httpschema_orgontology: JsonldId):
-        """
-        Sets the httpschema_orgontology of this Concept.
-
-        :param httpschema_orgontology: The httpschema_orgontology of this Concept.
-        :type httpschema_orgontology: JsonldId
-        """
-
-        self._httpschema_orgontology = httpschema_orgontology
-
-    @property
-    def iri(self) -> str:
-        """
-        Gets the iri of this Concept.
-
-        :return: The iri of this Concept.
+        :return: The rdfsis_defined_by of this Concept.
         :rtype: str
         """
-        return self._iri
+        return self._rdfsis_defined_by
 
-    @iri.setter
-    def iri(self, iri: str):
+    @rdfsis_defined_by.setter
+    def rdfsis_defined_by(self, rdfsis_defined_by: str):
         """
-        Sets the iri of this Concept.
+        Sets the rdfsis_defined_by of this Concept.
 
-        :param iri: The iri of this Concept.
-        :type iri: str
+        :param rdfsis_defined_by: The rdfsis_defined_by of this Concept.
+        :type rdfsis_defined_by: str
         """
 
-        self._iri = iri
+        self._rdfsis_defined_by = rdfsis_defined_by
 
     @property
-    def label(self) -> str:
+    def id(self) -> str:
         """
-        Gets the label of this Concept.
+        Gets the id of this Concept.
 
-        :return: The label of this Concept.
+        :return: The id of this Concept.
         :rtype: str
         """
-        return self._label
+        return self._id
 
-    @label.setter
-    def label(self, label: str):
+    @id.setter
+    def id(self, id: str):
         """
-        Sets the label of this Concept.
+        Sets the id of this Concept.
 
-        :param label: The label of this Concept.
-        :type label: str
+        :param id: The id of this Concept.
+        :type id: str
         """
 
-        self._label = label
+        self._id = id
 
     @property
-    def description(self) -> str:
+    def skospref_label(self) -> str:
         """
-        Gets the description of this Concept.
+        Gets the skospref_label of this Concept.
 
-        :return: The description of this Concept.
+        :return: The skospref_label of this Concept.
         :rtype: str
         """
-        return self._description
+        return self._skospref_label
 
-    @description.setter
-    def description(self, description: str):
+    @skospref_label.setter
+    def skospref_label(self, skospref_label: str):
         """
-        Sets the description of this Concept.
+        Sets the skospref_label of this Concept.
 
-        :param description: The description of this Concept.
-        :type description: str
+        :param skospref_label: The skospref_label of this Concept.
+        :type skospref_label: str
         """
 
-        self._description = description
+        self._skospref_label = skospref_label
 
     @property
-    def short(self) -> str:
+    def skosdefinition(self) -> str:
         """
-        Gets the short of this Concept.
+        Gets the skosdefinition of this Concept.
 
-        :return: The short of this Concept.
+        :return: The skosdefinition of this Concept.
         :rtype: str
         """
-        return self._short
+        return self._skosdefinition
 
-    @short.setter
-    def short(self, short: str):
+    @skosdefinition.setter
+    def skosdefinition(self, skosdefinition: str):
         """
-        Sets the short of this Concept.
+        Sets the skosdefinition of this Concept.
 
-        :param short: The short of this Concept.
-        :type short: str
+        :param skosdefinition: The skosdefinition of this Concept.
+        :type skosdefinition: str
         """
 
-        self._short = short
+        self._skosdefinition = skosdefinition
 
     @property
-    def synonyms(self) -> str:
+    def skosnote(self) -> str:
         """
-        Gets the synonyms of this Concept.
+        Gets the skosnote of this Concept.
 
-        :return: The synonyms of this Concept.
+        :return: The skosnote of this Concept.
         :rtype: str
         """
-        return self._synonyms
+        return self._skosnote
 
-    @synonyms.setter
-    def synonyms(self, synonyms: str):
+    @skosnote.setter
+    def skosnote(self, skosnote: str):
         """
-        Sets the synonyms of this Concept.
+        Sets the skosnote of this Concept.
 
-        :param synonyms: The synonyms of this Concept.
-        :type synonyms: str
+        :param skosnote: The skosnote of this Concept.
+        :type skosnote: str
         """
 
-        self._synonyms = synonyms
+        self._skosnote = skosnote
+
+    @property
+    def skosalt_label(self) -> str:
+        """
+        Gets the skosalt_label of this Concept.
+
+        :return: The skosalt_label of this Concept.
+        :rtype: str
+        """
+        return self._skosalt_label
+
+    @skosalt_label.setter
+    def skosalt_label(self, skosalt_label: str):
+        """
+        Sets the skosalt_label of this Concept.
+
+        :param skosalt_label: The skosalt_label of this Concept.
+        :type skosalt_label: str
+        """
+
+        self._skosalt_label = skosalt_label
 
